# netusage

./: LICENSE  README.md  example.py  pyproject.toml
.github/: ci.yaml
.github/workflows/: ci.yaml
netusage/: __init__.py
tests/: test_network_monitor.py
