[project]
name = "netusage"
version = "0.1.0"
description = "process traffic analyzer"
authors = [
    {name = "carlos",email = "carlosmateus@outlook.be"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil (>=5.7.2,<7)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
